--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <center>
         <h1>Ferran Iglesias</h1>
-        <img src="Elements_Grafics/Imatges/Samples/Untitled-1.jpg" alt="logo">
+        <img src="Elements_Grafics/Imatges/Samples/Untitled-1.jpg" alt="logo" width="320" height="320">
         <h2>3DModeler & Graphic designer</h2>
         <a href="https://www.behance.net/ferran_07"><img src="Elements_Grafics/Imatges/Samples/behance.svg" alt="Behance" width="50px" align="center"></a></center>
     </body>
